[tool.poetry]
name = "toolbox"
version = "0.1.0"
description = "A collection of utilities designed to simplify tasks and enhance the workflow"
authors = ["Andreas Daiminger <andreas@chaosisnotrandomitisrhythmic.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyjwt = "^2.8.0"
openai = {extras = ["datalib"], version = "^0.27.9"}
scikit-learn = "^1.5.2"
scikit-multilearn = "^0.2.0"
pandas = "^2.2.3"
scipy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
